Update Physical Web WebUI to show new results automatically

Before users need to manually refresh the page to see new nearby urls.
With this patch, new urls will be automatically appended to WebUI result.

BUG=692111

Review-Url: https://codereview.chromium.org/2741823002
Cr-Commit-Position: refs/heads/master@{#460431}

Former-commit-id: e1fba6f591fe7c8ecfdb1f4e52f37928f648b108