components/physical_web/webui/physical_web_ui_constants.cc
@@ -11,7 +11,7 @@ const char kPhysicalWebJS[] = "physical_web.js";
 const char kPhysicalWebCSS[] = "physical_web.css";
 
 // Message handlers.
-const char kRequestNearbyUrls[] = "requestNearbyURLs";
+const char kPhysicalWebPageLoaded[] = "physicalWebPageLoaded";
 const char kPhysicalWebItemClicked[] = "physicalWebItemClicked";
 
 // Strings.
@@ -22,7 +22,7 @@ const char kPageInfoIcon[] = "pageInfoIcon";
 const char kPageInfoTitle[] = "pageInfoTitle";
 const char kResolvedUrl[] = "resolvedUrl";
 const char kIndex[] = "index";
-const char kReturnNearbyUrls[] = "returnNearbyURLs";
+const char kPushNearbyUrls[] = "pushNearbyURLs";
 const char kMetadata[] = "metadata";
 
 }  // namespace physical_web_ui
